portico: Fix navbar button's alignment.
This commit fix the alignment of buttons in right-side navbar in
portico after change in gear menu icon's poition.

Fixes part of #22802

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -611,8 +611,9 @@ body.has-overlay-scrollbar {
         justify-content: space-evenly;
         position: absolute;
         top: 10px;
-        /* width of right column - width of gear icon(250px - 45px) */
-        width: 205px;
+        right: 40px;
+        /* width of right column - width of gear icon - right margin of column-right (250px - 40px -7px) */
+        width: 203px;
 
         & a {
             font-size: calc(16em / 14);
@@ -640,10 +641,9 @@ body.has-overlay-scrollbar {
         position: absolute;
         top: 0;
         right: 0;
-        /* Height of navbar in tablet sizes */
-        height: 40px;
+        height: var(--header-height);
         /* Width of userlist-toggle button. */
-        width: 45px;
+        width: var(--header-height);
         border-left: 1px solid hsl(0deg 0% 88%);
 
         .login_button {
@@ -2766,6 +2766,17 @@ select.invite-as {
         min-width: 750px;
     }
 
+    .spectator-view {
+        #navbar-middle {
+            margin-right: 85px;
+        }
+
+        #navbar-buttons {
+            position: absolute;
+            right: 45px;
+        }
+    }
+
     .column-right {
         display: none;
 
@@ -2899,6 +2910,17 @@ select.invite-as {
         }
     }
 
+    .spectator-view {
+        #navbar-middle {
+            margin-right: 65px;
+        }
+
+        #navbar-buttons {
+            position: absolute;
+            right: 35px;
+        }
+    }
+
     #navbar-middle {
         margin-right: 97px;
     }
@@ -2921,10 +2943,6 @@ select.invite-as {
 
     #searchbox_form {
         height: calc(var(--header-height) - 1px);
-    }
-
-    .spectator_narrow_login_button {
-        height: var(--header-height) !important;
     }
 
     #streamlist-toggle-button {
